--- a/po/de.po
+++ b/po/de.po
@@ -1,48 +1,35 @@
-# German translation for gnome-shell-trash-extension.
-# Copyright (C) 2013
-# This file is distributed under the same license as the
-# gnome-shell-trash-extension package.
-# Jonatan Zeidler <jonatan_zeidler@hotmail.de, 2013
-#
 msgid ""
 msgstr ""
-"Project-Id-Version: Trash Gnome-Shell extension\n"
-"Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2012-05-08 22:17+0200\n"
-"PO-Revision-Date: 2013-05-23 00:18+0100\n"
-"Last-Translator: Jonatan Zeidler <jonatan_zeidler@hotmail.de>\n"
-"Language-Team: German <jonatan_zeidler@gmx.de>\n"
-"Language: de\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 1.5.4\n"
-"X-Poedit-SourceCharset: UTF-8\n"
+"X-Generator: POEditor.com\n"
+"Project-Id-Version: sp.po\n"
+"Language: es-ve\n"
 
 #: ../extension.js:68
 msgid "Empty Trash"
-msgstr "Mülleimer leeren"
+msgstr "Sin Basura"
 
 #: ../extension.js:73
 msgid "Open Trash"
-msgstr "Mülleimer öffnen"
+msgstr "Abierta"
 
 #: ../extension.js:141
-msgid ""
-"Are you sure you want to delete all items from the trash?\n"
+msgid "Are you sure you want to delete all items from the trash?\n"
 "This operation cannot be undone."
-msgstr ""
-"Sollen alle Objekte aus dem Papierkorb entfernt werden?\n"
-"Alle Objekte im Papierkorb werden dauerhaft gelöscht."
+msgstr "¿Quiere borrar estos archivos?\n"
+"Este comando no se puede revertir."
 
 #: ../extension.js:163
 msgid "Empty Trash?"
-msgstr "Mülleimer leeren?"
+msgstr "Sin Basura?"
 
 #: ../extension.js:174
 msgid "Cancel"
-msgstr "Abbrechen"
+msgstr "Anular"
 
 #: ../extension.js:181
 msgid "Empty"
-msgstr "Leeren"
+msgstr "Vacio"
+
